[package]
name = "demo_tipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "=0.2.78"
wasm-logger = "0.2"
log = "0.4.6"
yew = "=0.19"
gloo-file = "0.2"
gloo = "0.4"
itertools = "0.10.5"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dependencies.web-sys]
version = "0.3"
features = ["File", "HtmlInputElement" ]

# [dependencies.image]
# version = "0.23.14"
# default-features = false
# features = ["png"]
# you can add pnm, tga, tiff,  hdr, dxt, dss, farbfeld, gif, jpeg, webp, ico, bmp

# [dependencies.zip]
# version = "0.5.13"
# default-features = false
